horizontal scroll fix (4)

--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -4,7 +4,7 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 769px) {
   .place__image {
     max-width: 340px;
   }
